add error codes header file

--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,7 @@
-project('usrp-tools', 'cpp', version: '0.0')
+project('usrp-tools', 'cpp', version: '0.0', default_options : ['c_std=c11', 'cpp_std=c++11'])
 
 # Boost and UHD libraries
-boost_dep = dependency('boost', modules : ['program_options'])
+boost_dep = dependency('boost', modules : ['system','program_options'])
 uhd_dep = dependency('uhd')
 
 # Our precious executables
